+Lab4 and new name for folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-Lab1-2/.vs
-Lab1-2/obj/Debug/net8.0-windows/Lab1-2_e0lkh1sj_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
-Lab1-2/obj
-Lab1-2/bin
-
+Lab1-3/.vs
+Lab1-3/obj/Debug/net8.0-windows/Lab1-2_e0lkh1sj_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+Lab1-3/obj
+Lab1-3/bin
+Lab4/.vs
